squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-squirrel_repo-regex.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
  - - ex
    - 1
  - - string
    - 2
  - - res
    - 3
num_locals: 4
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionCall:
                      func:
                        Expr:
                          data:
                            Ident: regexp
                          span:
                            start: Start
                            end: End
                      args:
                        - data:
                            Literal:
                              String: "[a-zA-Z]+"
                          span:
                            start: Start
                            end: End
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 2
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      String: 123 Test; strlen(str);
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 3
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionCall:
                      func:
                        FieldAccess:
                          - data:
                              Local:
                                - 1
                                - start: Start
                                  end: End
                            span:
                              start: Start
                              end: End
                          - - search
                            - start: Start
                              end: End
                      args:
                        - data:
                            Local:
                              - 2
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: print
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      FunctionCall:
                        func:
                          FieldAccess:
                            - data:
                                Local:
                                  - 2
                                  - start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                            - - slice
                              - start: Start
                                end: End
                        args:
                          - data:
                              FieldAccess:
                                - data:
                                    Local:
                                      - 3
                                      - start: Start
                                        end: End
                                  span:
                                    start: Start
                                    end: End
                                - - begin
                                  - start: Start
                                    end: End
                            span:
                              start: Start
                              end: End
                          - data:
                              FieldAccess:
                                - data:
                                    Local:
                                      - 3
                                      - start: Start
                                        end: End
                                  span:
                                    start: Start
                                    end: End
                                - - end
                                  - start: Start
                                    end: End
                            span:
                              start: Start
                              end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: print
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Literal:
                        String: "\n"
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionCall:
                      func:
                        Expr:
                          data:
                            Ident: regexp
                          span:
                            start: Start
                            end: End
                      args:
                        - data:
                            Literal:
                              String: "\\m()"
                          span:
                            start: Start
                            end: End
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 2
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      String: "123 Test; doSomething(str, getTemp(), (a+(b/c)));"
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 3
                    - start: Start
                      end: End
                value:
                  data:
                    FunctionCall:
                      func:
                        FieldAccess:
                          - data:
                              Local:
                                - 1
                                - start: Start
                                  end: End
                            span:
                              start: Start
                              end: End
                          - - search
                            - start: Start
                              end: End
                      args:
                        - data:
                            Local:
                              - 2
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: print
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      FunctionCall:
                        func:
                          FieldAccess:
                            - data:
                                Local:
                                  - 2
                                  - start: Start
                                    end: End
                              span:
                                start: Start
                                end: End
                            - - slice
                              - start: Start
                                end: End
                        args:
                          - data:
                              FieldAccess:
                                - data:
                                    Local:
                                      - 3
                                      - start: Start
                                        end: End
                                  span:
                                    start: Start
                                    end: End
                                - - begin
                                  - start: Start
                                    end: End
                            span:
                              start: Start
                              end: End
                          - data:
                              FieldAccess:
                                - data:
                                    Local:
                                      - 3
                                      - start: Start
                                        end: End
                                  span:
                                    start: Start
                                    end: End
                                - - end
                                  - start: Start
                                    end: End
                            span:
                              start: Start
                              end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: print
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Literal:
                        String: "\n"
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
