squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-verify-lexical_structure-keywords.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: Parser test for verify/lexical_structure/keywords.nut
---
keyword_span:
  start: 0
  end: 0
arg_span:
  start: 0
  end: 0
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
  - - foo
    - 1
  - - Foo
    - 2
num_locals: 3
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: 6
                      end: 9
                value:
                  data:
                    Literal:
                      String: foo
                  span:
                    start: 12
                    end: 17
                kind: Normal
                op_span:
                  start: 10
                  end: 11
            span:
              start: 6
              end: 17
        span:
          start: 6
          end: 17
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 2
                    - start: 24
                      end: 27
                value:
                  data:
                    Literal:
                      String: Foo
                  span:
                    start: 30
                    end: 35
                kind: Normal
                op_span:
                  start: 28
                  end: 29
            span:
              start: 24
              end: 35
        span:
          start: 24
          end: 35
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: 37
                        end: 39
                    - - print
                      - start: 39
                        end: 44
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: 49
                          end: 50
                        lhs:
                          data:
                            Local:
                              - 1
                              - start: 45
                                end: 48
                          span:
                            start: 45
                            end: 48
                        rhs:
                          data:
                            Local:
                              - 2
                              - start: 51
                                end: 54
                          span:
                            start: 51
                            end: 54
                    span:
                      start: 45
                      end: 54
            span:
              start: 44
              end: 55
        span:
          start: 44
          end: 55
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: 57
                        end: 59
                    - - print
                      - start: 59
                        end: 64
                args:
                  - data:
                      Literal:
                        Integer: 6
                    span:
                      start: 65
                      end: 73
            span:
              start: 64
              end: 74
        span:
          start: 64
          end: 74
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: 75
                        end: 77
                    - - print
                      - start: 77
                        end: 82
                args:
                  - data:
                      FunctionCall:
                        func:
                          FieldAccess:
                            - data:
                                Literal:
                                  String: verify/lexical_structure/keywords.nut
                              span:
                                start: 83
                                end: 91
                            - - slice
                              - start: 92
                                end: 97
                        args:
                          - data:
                              UnaryOp:
                                - Neg
                                - start: 98
                                  end: 99
                                - data:
                                    Literal:
                                      Integer: 12
                                  span:
                                    start: 99
                                    end: 101
                            span:
                              start: 98
                              end: 101
                    span:
                      start: 97
                      end: 102
            span:
              start: 82
              end: 103
        span:
          start: 82
          end: 103
  span:
    start: 0
    end: 103
